# ldt

./: .env  .env.example  .env.mcp.example  .gitignore  BENCHMARK_PLAN.md  CA-DQStream_Engineering_Blueprint_Updated.docx  DEPLOYMENT.md  DEPLOYMENT_LAPTOP.md  Dockerfile.flink  Dockerfile.ml-service  HOW_TO_RUN.txt  LAPTOP.md  MCP-SERVERS.md  Makefile  REPORT.md  benchmark_idea.md  benchmark_sota.md  check-py-crlf.ps1  check_job.py  check_job2.py  check_job3.py  check_job4.py  check_outputs.py  create_dashboard.py  data.txt  data_eda_results.json  data_number_checklist.txt  describe.txt  docker-compose.laptop.yml  docker-compose.yml  e2e_pipeline_submit.py  eda_2025.py  eda_extra.py  experiment_matrix.md  fix-crlf.ps1  fix-py-crlf.ps1  fixdocker-prompt.md  flink_job_submit.py  generate_data.py  generate_sample.py  (+50 more)
.claude/: .nfs00000000028a704300000029  CLAUDE.md
ANOMALY_DETECTION_BENCHMARK/: QUICKSTART.md  README.md
GOOD_DATA/: inject_anomalies_memstream.py  viz_anomaly_types.py
HP_benchmark_v4/: _analyze_gap.py  _check_final.py  _check_gs_ablation.py  _finalize_grid.py  _finalize_grid_search.py  _finalize_gs2.py  _run_stage3.py  ablation.py  benchmark_core.py  comparison.py  grid_search.py
HP_benchmark_v5/: _analysis1_features.py  _analysis2_34d.py  _analysis3_ae.py  _analysis4_scores.py  _analysis5_gt.py  _analysis6_injection.py  _analyze_paths.py  _analyze_paths2.py  _cleanup_s2_s3.py  _comparison_v2_supplement.py  _run_ablation.ps1  _run_ablation.py  _run_comparison.ps1  _run_comparison.py  ablation.py  ablation_quick.py  ablation_scoring.py  ablation_scoring_v2.py  ablation_streaming.py  compare_streaming.py  grid_search.py
adwin+meter/: ADWIN_U_detector.py
config/: pgbouncer.ini  prometheus.yml  userlist.txt
data-benchmark/: data.txt
deployment/: .env  AGENT_PROMPT.md  Makefile  README.md  alter_topic_config.py  cancel_job.py  cancel_restarting.py  check_flink.sh  create_dashboard.py  create_minio_buckets.py  create_minio_buckets.sh  debug_kafka.py  docker-compose-minimal.yml  docker-compose.yml  e2e_pipeline_submit.py  fix_mcp2.ps1  full_status.py  inject_anomalies.sh  post_silence.sh  register_schemas.py  run_e2e_direct.py  setup2.md
docker/: docker-compose.yml  verify_stack.py
docs/: SECURITY.md  concept_drift_analysis.md  critical_flaws_fix.md  eda_findings.md  full_flow_explained.md  full_flow_explained_v2.md
eda-chapter/: raw-issues.txt
experiments/: benchmark_5_variants.py  grid_search_iforest.py  statistical_tests.py
explore_hyperparameters/: exp01_memory_len.py  exp05_adwin_delta.py  exp09_cell_minimum.py  (+5 more)
(+3071 files in other folders)
