[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ca-dqstream"
version = "0.1.0"
description = "Context-Aware Data Quality Stream Processing System"
readme = "README.md"
requires-python = ">=3.8,<3.11"
authors = [
    {name = "DyTech Lab", email = "noreply@dytechlab.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    # Flink
    "apache-flink==1.18.0",

    # Kafka & Streaming
    "kafka-python==2.0.2",
    "avro-python3==1.10.2",

    # Data Storage
    "sqlalchemy==2.0.23",

    # ML & Data Science
    "scikit-learn==1.3.2",
    "river==0.21.0",
    "mlflow==2.9.2",
    "pandas==2.0.3",
    "numpy>=1.24.4,<2",

    # API & Monitoring
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "prometheus-client==0.19.0",

    # Utilities
    "mmh3==4.0.1",
    "requests==2.31.0",
    "boto3>=1.34.0",
    "minio>=7.2.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "ruff==0.1.6",
    "mypy==1.7.1",
]

notebook = [
    "jupyter==1.0.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "plotly==5.18.0",
]

[project.scripts]
cadqstream = "src.flink_job:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
